# Desercion_en_Ingenieria

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Notebooks/: 01_Datos_Raw.ipynb  02_Analisis_Inicial.ipynb  03_Limpieza_Datos_Alumnos.ipynb  04_Limpieza_Datos_Cursadas.ipynb  05_Limpieza_Datos_Finales.ipynb  06_Limpieza_Datasets.ipynb  20_Dataset_01.ipynb  21_Dataset_01.ipynb  22_Dataset_01.ipynb  23_Dataset_01.ipynb
Notebooks/reportes/: Alumnos_DatosReducidos_ProfileReport.html  Alumnos_ProfileReport.html  Cursadas_ProfileReport.html  Finales_ProfileReport.html
