[tool.poetry]
name = "tesis-ds"
version = "0.1.0"
description = "Desercion en Ingenieria"
authors = ["Sebastian Ezequiel Jaremczuk"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
openpyxl = "^3.0.10"
kaleido = "0.2.1"
xgboost = "^1.7.6"
lightgbm = "^3.3.5"
pycaret = "3.0.0"
catboost = "^1.2"
ydata-profiling = "^4.3.1"

[tool.poetry.dev-dependencies]
pytest = "5.0.0"
pytest-cov = "2.6.0"
pytest-mock = "^3.6.1"
ipykernel = "^6.15.2"
pre-commit = "^3.3.3"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
